EDGE-287 Scheduling Queue
